--- a/style.css
+++ b/style.css
@@ -4,3 +4,59 @@
   box-sizing: border-box;
   font-family: sans-serif;
 }
+
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+h1 {
+  text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem auto;
+  gap: 0.5rem;
+
+  input {
+    transition: 0.05s ease;
+    border-radius: 1rem;
+    border: 1px solid gray;
+    padding: 0.5rem 1rem;
+
+    &:focus {
+      outline: 2px solid blue;
+    }
+  }
+
+  button {
+    padding: 0.5rem 0;
+    border-radius: 0.4rem;
+    border: none;
+    transition: 0.2s ease;
+    cursor: pointer;
+  }
+}
+
+.example-steps {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  line-height: 1.5rem;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
