--- a/style.css
+++ b/style.css
@@ -5,10 +5,16 @@
   font-family: sans-serif;
 }
 
+body {
+  background-color: rgb(0, 44, 44);
+}
+
 .wrapper {
+  background-color: rgb(52, 120, 143);
   max-width: 1200px;
   margin: 0 auto;
   padding: 1rem;
+  box-shadow: 0 0 50px black;
 }
 
 main {
@@ -19,6 +25,8 @@ main {
 
 h1 {
   text-align: center;
+  color: white;
+  text-shadow: 1px 1px black;
 }
 
 form {
@@ -26,6 +34,8 @@ form {
   flex-direction: column;
   margin: 2rem auto;
   gap: 0.5rem;
+  color: white;
+  text-shadow: 1px 1px black;
 
   input {
     transition: 0.05s ease;
@@ -44,6 +54,7 @@ form {
     border: none;
     transition: 0.2s ease;
     cursor: pointer;
+    margin-top: 1rem;
   }
 }
 
@@ -51,12 +62,48 @@ form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-
   line-height: 1.5rem;
+  color: white;
+  text-shadow: 1px 1px black;
+
+  p {
+    border-top: 1px solid black;
+    padding-top: 1rem;
+
+    &:last-of-type {
+      border-bottom: 1px solid black;
+      padding-bottom: 1rem;
+    }
+  }
 }
 
 .result {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  text-shadow: 2px 2px black;
+  color: rgb(255, 255, 255);
+}
+
+.step {
+  background: linear-gradient(
+    to right,
+    rgb(142, 130, 106),
+    rgba(255, 255, 255, 0)
+  );
+  border-left: 0.3rem solid rgb(255, 255, 255);
+  font-size: 1.1rem;
+  font-weight: 600;
+  border-radius: 1rem;
+  padding: 0.6rem;
+  padding-left: 1rem;
+
+  &:not(:first-of-type) {
+    margin-top: 3rem;
+  }
+}
+
+.section-step {
+  margin-left: 1.4rem;
+  font-size: 1.05rem;
 }
