--- a/style.css
+++ b/style.css
@@ -180,3 +180,37 @@ form {
   font-size: 12px;
   margin-top: 5px;
 }
+
+.start-page-btn {
+  position: fixed;
+  background-color: rgb(74, 187, 187);
+  border: none;
+  width: 3rem;
+  height: 3rem;
+  bottom: 2rem;
+  right: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: 0.2s ease;
+  transform-origin: center;
+
+  img {
+    width: 100%;
+    height: 100%;
+    padding: 0.8rem;
+    filter: invert(1);
+  }
+}
+
+.start-page-btn:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgb(122, 122, 122);
+}
+
+.start-page-btn:active {
+  transform: scale(0.95);
+  box-shadow: 0 0 5px rgb(255, 255, 255);
+}
